# A-H-Premium-Arbitrage-Monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ah_pairs.csv  app.py  pyproject.toml  requirements.txt
.claude/rules/: data-sources.md  streamlit-html-js.md
.claude/skills/autoresearch/: SKILL.md
.claude/skills/dev/: SKILL.md
.claude/skills/test-monitor/: SKILL.md
.github/workflows/: ci.yml
.streamlit/: config.toml
scripts/: bootstrap_ah_pairs.py
src/alerts/: __init__.py  checker.py  telegram.py
src/calc/: premium.py  screener.py
src/config/: settings.py
src/data/: ah_mapping.py  ah_pairs.json  akshare_client.py  futu_client.py  futu_ctx.py  fx_client.py  pair_discovery.py  realtime.py  sync.py
src/storage/: db.py  kline_cache.py
tests/: conftest.py  test_db.py  test_kline_cache.py  test_mapping.py  test_pair_discovery.py  test_premium.py
