[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ah-arb"
version = "0.1.0"
description = "Real-time A/H share premium arbitrage monitor"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
keywords = ["a-share", "h-share", "premium", "arbitrage", "streamlit", "futu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "futu-api>=9.1.0",
    "akshare>=1.14.0",
    "apscheduler>=3.10.0",
    "platformdirs>=4.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4.0",
    "mypy>=1.8",
    "pre-commit>=3.6",
]

[project.urls]
Homepage = "https://github.com/xcnecon/ah-arb"
Repository = "https://github.com/xcnecon/ah-arb"
Issues = "https://github.com/xcnecon/ah-arb/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
